<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.lobby.LobbyFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!-- Titulo -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lobby_tittle"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:fontFamily="@font/amiko"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/title_description"
            android:layout_marginTop="10dp"
           />

        <!-- Descripcion -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lobby_description"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            android:fontFamily="@font/amiko"
            app:layout_constraintTop_toBottomOf="@id/title_main"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- CardView 1 (Regiones) -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card1"
            app:layout_constraintTop_toBottomOf="@id/title_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="80dp"
            app:cardElevation="4dp"
            app:strokeWidth="1dp"
            app:strokeColor="@color/black"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/card1_bc_image"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:alpha="@dimen/material_emphasis_disabled"
                    android:scaleType="centerCrop"
                    android:src="@drawable/region"
                    android:contentDescription="@string/bc_images_description"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/text_view_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/card1_title"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textColor="@color/black"
                        app:fontFamily="@font/amiko"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toTopOf="@id/text_view_description"/>
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/text_view_description"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/card1_description"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        app:fontFamily="@font/amiko"
                        app:layout_constraintTop_toBottomOf="@id/text_view_title"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toTopOf="@id/button1"/>
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button_press"
                        android:gravity="center"
                        app:backgroundTint="@color/red"
                        app:layout_constraintTop_toBottomOf="@id/text_view_description"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>


        <!-- CardView 2 (Iniciales) -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="80dp"
            app:cardElevation="4dp"
            app:strokeWidth="1dp"
            app:strokeColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/card1">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/card2_bc_image"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:alpha="@dimen/material_emphasis_disabled"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pokes_iniciales"
                    android:contentDescription="@string/bc_images_description"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/title_card2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/card2_title"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textColor="@color/black"
                        app:fontFamily="@font/amiko"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toTopOf="@id/card2_description"/>
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/card2_description"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/card2_description"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        app:fontFamily="@font/amiko"
                        app:layout_constraintTop_toBottomOf="@id/title_card2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toTopOf="@id/button2"/>
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button_press"
                        android:gravity="center"
                        app:backgroundTint="@color/red"
                        app:layout_constraintTop_toBottomOf="@id/card2_description"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>


        <!-- CardView 3 (Pokeballs) -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="80dp"
            app:cardElevation="4dp"
            app:strokeWidth="1dp"
            app:strokeColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/card2">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/card3_bc_image"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:alpha="@dimen/material_emphasis_disabled"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pokeballs"
                    android:contentDescription="@string/bc_images_description"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/title_card3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/card3_title"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textColor="@color/black"
                        app:fontFamily="@font/amiko"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toTopOf="@id/card3_description"/>
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/card3_description"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/card3_description"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        app:fontFamily="@font/amiko"
                        app:layout_constraintTop_toBottomOf="@id/title_card3"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toTopOf="@id/button3"/>
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button_press"
                        android:gravity="center"
                        app:backgroundTint="@color/red"
                        app:layout_constraintTop_toBottomOf="@id/card3_description"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>